--- a/cloudformation/pizza.template
+++ b/cloudformation/pizza.template
@@ -20,7 +20,7 @@
       "Type": "AWS::EC2::Subnet",
       "Properties": {
         "CidrBlock": "10.0.1.0/24",
-        "AvailabilityZone": "us-west-2b",
+        "AvailabilityZone": "us-east-1b",
         "VpcId": {
           "Ref": "vpc0d9ce469"
         },
@@ -36,7 +36,7 @@
       "Type": "AWS::EC2::Subnet",
       "Properties": {
         "CidrBlock": "10.0.0.0/24",
-        "AvailabilityZone": "us-west-2a",
+        "AvailabilityZone": "us-east-1a",
         "VpcId": {
           "Ref": "vpc0d9ce469"
         },
@@ -50,13 +50,12 @@
     },
     "igwb13ad2d5": {
       "Type": "AWS::EC2::InternetGateway",
-      "Properties": {
-      }
+      "Properties": {}
     },
     "dopt949461f0": {
       "Type": "AWS::EC2::DHCPOptions",
       "Properties": {
-        "DomainName": "us-west-2.compute.internal",
+        "DomainName": "us-east-1.compute.internal",
         "DomainNameServers": [
           "AmazonProvidedDNS"
         ]
@@ -134,8 +133,8 @@
       "DependsOn": "gw1",
       "Properties": {
         "AvailabilityZones": [
-          "us-west-2a",
-          "us-west-2b"
+          "us-east-1a",
+          "us-east-1b"
         ],
         "Cooldown": "300",
         "DesiredCapacity": "2",
@@ -168,7 +167,7 @@
       "Type": "AWS::AutoScaling::LaunchConfiguration",
       "Properties": {
         "AssociatePublicIpAddress": true,
-        "ImageId": "ami-d0864bb0",
+        "ImageId": "ami-045e749052706cf39",
         "InstanceType": "t2.micro",
         "KeyName": "pizza-keys",
         "IamInstanceProfile": "pizza-ec2-role",
@@ -296,8 +295,12 @@
       "Properties": {
         "DBSubnetGroupDescription": "default",
         "SubnetIds": [
-          { "Ref": "subnet0a00807c" },
-          { "Ref": "subnet1e84ed7a" }
+          {
+            "Ref": "subnet0a00807c"
+          },
+          {
+            "Ref": "subnet1e84ed7a"
+          }
         ]
       }
     },
@@ -494,7 +497,7 @@
         "Statistic": "Sum",
         "Threshold": "240.0",
         "AlarmActions": [
-          "arn:aws:sns:us-west-2:180732999116:dynamodb"
+          "arn:aws:sns:us-east-1:180732999116:dynamodb"
         ],
         "Dimensions": [
           {
@@ -516,7 +519,7 @@
         "Statistic": "Sum",
         "Threshold": "240.0",
         "AlarmActions": [
-          "arn:aws:sns:us-west-2:180732999116:dynamodb"
+          "arn:aws:sns:us-east-1:180732999116:dynamodb"
         ],
         "Dimensions": [
           {
@@ -538,7 +541,7 @@
         "Statistic": "Sum",
         "Threshold": "240.0",
         "AlarmActions": [
-          "arn:aws:sns:us-west-2:180732999116:dynamodb"
+          "arn:aws:sns:us-east-1:180732999116:dynamodb"
         ],
         "Dimensions": [
           {
@@ -560,7 +563,7 @@
         "Statistic": "Sum",
         "Threshold": "240.0",
         "AlarmActions": [
-          "arn:aws:sns:us-west-2:180732999116:dynamodb"
+          "arn:aws:sns:us-east-1:180732999116:dynamodb"
         ],
         "Dimensions": [
           {
@@ -617,28 +620,28 @@
         }
       }
     },
-    "subnetRouteTableAssociationA" : {
-         "Type" : "AWS::EC2::SubnetRouteTableAssociation",
-         "Properties" : {
-            "SubnetId" : {
-              "Ref" : "subnet0a00807c"
-            },
-            "RouteTableId" : {
-              "Ref" : "rtbb57c56d1"
-            }
-         }
-      },
-      "subnetRouteTableAssociationB" : {
-         "Type" : "AWS::EC2::SubnetRouteTableAssociation",
-         "Properties" : {
-            "SubnetId" : {
-              "Ref" : "subnet1e84ed7a"
-            },
-            "RouteTableId" : {
-              "Ref" : "rtbb57c56d1"
-            }
-         }
-      },
+    "subnetRouteTableAssociationA": {
+      "Type": "AWS::EC2::SubnetRouteTableAssociation",
+      "Properties": {
+        "SubnetId": {
+          "Ref": "subnet0a00807c"
+        },
+        "RouteTableId": {
+          "Ref": "rtbb57c56d1"
+        }
+      }
+    },
+    "subnetRouteTableAssociationB": {
+      "Type": "AWS::EC2::SubnetRouteTableAssociation",
+      "Properties": {
+        "SubnetId": {
+          "Ref": "subnet1e84ed7a"
+        },
+        "RouteTableId": {
+          "Ref": "rtbb57c56d1"
+        }
+      }
+    },
     "gw1": {
       "Type": "AWS::EC2::VPCGatewayAttachment",
       "Properties": {
